tests/fixtures/invalid/int_subscript.py
# Test subscript on int (unsupported)
x: int = 42
print(x[0])
